...
                onLoadError();
              }
            }
      }
      onRegionDidChange={onRegionDidChange}
      style={styles.map}
      testID="arow-map"
    >
      <MapCamera
        focusLocation={focusLocation}
        focusRequest={focusRequest}
        location={location}
        recenterRequest={recenterRequest}
...
